--- a/style.css
+++ b/style.css
@@ -148,7 +148,12 @@ a.btn_form,a.btn_comm,input.btn_comm{
     border-color:white;
 }
 
-a.btn_form:hover,a.btn_form2:hover,a.btn_comm:hover,input.btn_comm:hover,input.btn_form:hover{
+/* Hover boutons a : */
+a.btn_form:hover,a.btn_form2:hover,a.btn_comm:hover,
+/* Hover boutons input :  */
+input.btn_comm:hover,input.btn_form:hover,
+/* Hover card :  */
+.card:hover, .card-body:hover{
     background-color :green;
     border-color: green;
 }
